--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Jiyang Gao
-description: "Hi, welcome to my webpage! Email: jiyanggao1203 at gmail dot com"
+title: Xiaoyu Chen
+description: "Hi, welcome to my webpage! Email:  xiaoyu-chen@shu.edu.cn"
 theme: jekyll-theme-minimal
